2009-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h       Make all internal initialization
	* generic/tclTest.c      routines MODULE_SCOPE
	* generic/tclTestObj.c
	* generic/tclTestProcBodyObj.c
	* generic/tclThreadTest.c
	* unix/Makefile.in       Fix [Bug 2883850]: pkgIndex.tcl doesn't
	* unix/tclAppInit.c      get created with static Tcl build
	* unix/tclXtTest.c
	* unix/tclXtNotify.c
	* unix/tclUnixTest.c
	* win/Makefile.in
	* win/tcl.m4
	* win/configure          (regenerated)
	* win/tclWinDde.c        Always compile with Stubs.
	* win/tclWinReg.c
	* win/tclWinTest.c
	
2009-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/CrtChannel.3      Fix [Bug 2849797]: channel name inconsistencies
	* generic/tclIORChan.c  as suggested by DKF
	* generic/tclIO.c       minor *** POTENTIAL INCOMPATIBILITY *** because
	                        Tcl_CreateChannel() and its derivatives, now
	                        sometimes ignore their "chanName" argument.

2009-11-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclAsync.c  Eliminate various gcc warnings (in -Wextra mode)
	* generic/tclBasic.c
	* generic/tclBinary.c
	* generic/tclCmdAH.c
	* generic/tclCmdIL.c
	* generic/tclCmdMZ.c
	* generic/tclCompile.c
	* generic/tclDate.c
	* generic/tclExecute.c
	* generic/tclDictObj.c
	* generic/tclIndexObj.c
	* generic/tclIOCmd.c
	* generic/tclIOUtil.c
	* generic/tclIORTrans.c
	* generic/tclOO.c
	* generic/tclZlib.c
	* generic/tclGetDate.y
	* win/tclWinInit.c
	* win/tclWinChan.c
	* win/tclWinConsole.c
	* win/tclWinNotify.c
	* win/tclWinReg.c
	* library/auto.tcl          Eliminate "then" keyword
	* library/clock.tcl
	* library/history.tcl
	* library/safe.tcl
	* library/tm.tcl
	* library/http/http.tcl     Eliminate unnecessary spaces
	* library/http1.0/http.tcl
	* library/msgcat/msgcat.tcl
	* library/opt/optparse.tcl
	* library/platform/platform.tcl
	* tools/tcltk-man2html.tcl
	* tools/tclZIC.tcl
	* tools/tsdPerf.c
